syntax = "proto3";

package velez_api;

import "google/api/annotations.proto";
import "npm.proto";

import "velez_api.proto";

option go_package = "go.vervstack.ru/velez/pkg/velez_api;velez_api";
option (npm_package) = "@vervstack/velez";

service ControlPlaneAPI {
  rpc ListServices(ListServices.Request) returns (ListServices.Response) {
    option (google.api.http) = {
      get: "/api/control_plane/services"
    };
  }

  rpc EnableService(EnableService.Request) returns (EnableService.Response) {
    option (google.api.http) = {
      post: "/api/control_plane/service/enable"
      body: "*"
    };
  }

  // ConnectSlave - used by other Velez nodes to connect to cluster
  rpc ConnectSlave(ConnectSlave.Request) returns (ConnectSlave.Response) {
    option (google.api.http) = {
      post: "/api/slave/connect"
      body: "*"
    };
  }
}

message ListServices {
  message Request {

  }
  message Response {
    repeated Service services = 1;
    repeated Service inactive_services = 2;
  }
}


message Service  {
  VervServiceType type = 1;
  optional uint32 port = 2;
}

enum VervServiceType {
  unknown_service_type = 0;
  matreshka = 1;
  makosh = 2;

  webserver = 3;
  headscale = 4;

  portainer = 5;

  statefull_pg = 6;
}

message EnableService {
  message Request {
    VervServiceType service = 1;
  }

  message Response {}
}

message InitMaster {
  message Request{};

  message Response{};
}

message ConnectSlave {
  message Request {}

  message Response {}
}
